--- a/frontend/src/components/posts/TagFilter.css
+++ b/frontend/src/components/posts/TagFilter.css
@@ -63,17 +63,15 @@
   background-color: #f8f8f8;
 }
 
-.tag-option input[type="checkbox"] {
-  margin-right: 6px;
-  cursor: pointer;
-  width: 12px;
-  height: 12px;
-}
-
 .tag-label {
   font-size: 12px;
   color: #333;
   font-weight: 500;
+}
+
+.tag-label.selected {
+  font-weight: bold;
+  font-size: 13px;
 }
 
 .tag-label.Negative {
