--- a/frontend/src/themes/summer.css
+++ b/frontend/src/themes/summer.css
@@ -270,7 +270,7 @@
 
 [data-theme='summer'] .post-form-left {
   width: 300px;
-  height: 100%;
+  height: auto;
   min-height: 350px;
   background-size: cover;
   background-position: center;
