[u] fix modal close button position

--- a/frontend/src/themes/summer.css
+++ b/frontend/src/themes/summer.css
@@ -394,3 +394,8 @@
   display: flex;
   justify-content: flex-start;
 }
+
+[data-theme='summer'] .modal-close-button {
+  top: 5px;
+  right: 5px;
+}
